Revision history for IRC-Client-Plugin-Logger

{{$NEXT}}

0.0.12  2022-04-07T17:47:00+02:00
    - Update IRC::Client dependency

0.0.11  2022-01-07T00:11:14+01:00
    - Externalize the normalizer logic as an attribute
    - Add 'default-normalizer' and 'default-now' class methods
    - Up dependency to hopefully fix connection breakage handling

0.0.10  2021-12-16T14:14:45+01:00
    - Make sure that texts are properly normalized with regards
      to control and colour codes, before being logged

0.0.9  2021-12-15T15:28:07+01:00
    - Up IRC::Client dependency for better PING tests

0.0.8  2021-12-10T16:40:17+01:00
    - Fix dependency version mismatch

0.0.7  2021-12-10T16:24:14+01:00
    - Bump dependency on IRC::Client to get fixed reconnect capability

0.0.6  2021-12-09T11:27:20+01:00
    - Bump dependency on IRC::Client to get reconnect capability

0.0.5  2021-12-07T20:00:13+01:00
    - Bump dependency on IRC::Client
    - Minor changes to prevent collision with Message

0.0.4  2021-09-10T14:01:06+02:00
    - Change file extension to .rakumod
    - Migrate to zef ecosystem
    - Update email address
    - Add response when addressed
    - Add support for IRC::Client::Message::Topic

0.0.3  2021-04-23T13:15:47+02:00
    - Keep mapping of nicks and channels that they're on
    - Only log QUIT of a nick on a channel they're actually on

0.0.2  2021-04-22T23:18:31+02:00
    - Add support for Mode message
    - Add support for :now parameter
    - Fix Nick message
    - Fix Quit message
    - Add some real tests

0.0.1  2021-04-22T14:48:11+02:00
    - Initial version