@@ -1,4 +1,4 @@
-name: test
+name: MacOS
 
 on:
   push:
@@ -13,20 +13,16 @@ jobs:
     strategy:
       matrix:
         os:
-          - ubuntu-latest
-          - macOS-latest
-          - windows-latest
+          - macos-latest
         raku-version:
           - 'latest'
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: Raku/setup-raku@v1
         with:
           raku-version: ${{ matrix.raku-version }}
-      - if: matrix.os == 'macOS-latest'
-        run: brew install openssl
       - name: Install Dependencies
-        run: zef -v install --/test --test-depends --deps-only .
-      - name: Run Tests
-        run: raku run-tests
+        run: zef install --/test --test-depends --deps-only .
+      - name: Run Special Tests
+        run: raku run-tests -i
