@@ -2,12 +2,14 @@ name = IRC-Client-Plugin-Logger
 
 [ReadmeFromPod]
 ; enable = false
-filename = lib/IRC/Client/Plugin/Logger.rakumod
+filename = doc/IRC-Client-Plugin-Logger.rakudoc
 
 [PruneFiles]
 ; match = ^ 'xt/'
 
 [Badges]
-provider = github-actions/test
+provider = github-actions/linux.yml
+provider = github-actions/macos.yml
+provider = github-actions/windows.yml
 
 [UploadToZef]
